# mai_object-oriented-programming_lab-4

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  tests.cpp
include/: array.hpp  figures.hpp  point.hpp  tools.hpp
src/figures/: constructors.cpp  tools.cpp
